tests/emo-files/invalid/unterminated-emoji-newline.emo
# unterminated emoji tests (newline)

:cry
